--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -108,24 +108,6 @@
     }
   }
 
-  .topic-users {
-    grid-area: posters;
-    padding: 0 0 5px 5px;
-
-    .inline {
-      float: right;
-      line-height: 24px;
-      text-align: right;
-
-      .avatar {
-        padding: 0 0 0 0px;
-        margin-right: -2px;
-        width: 22px;
-        height: 22px;
-      }
-    }
-  }
-
   .topic-statuses {
     float: right;
   }
@@ -150,10 +132,6 @@
     grid-area: tags;
   }
 
-  .topic-meta {
-    grid-area: meta;
-  }
-
   .topic-poster-names a {
     font-size: 0.9em;
   }
@@ -172,29 +150,6 @@
     display: block;
     padding-left: 0;
     padding-top: 3px;
-  }
-
-  .topic-meta {
-    float: left;
-  }
-
-  .topic-actions {
-    grid-area: actions;
-    float: right;
-    justify-content: flex-end;
-    text-align: right;
-    vertical-align: bottom;
-
-    .list-button {
-      font-size: 1em;
-      padding: 0 0 0 10px;
-      color: var(--primary-medium);
-
-      &.has-like,
-      &.topic-like:not([disabled]):hover {
-        color: var(--love);
-      }
-    }
   }
 }
 
